--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "next": "^14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "sharp": "^0.33.2",
     "tailwindcss": "3.3.3",
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
